--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # compiled output
 /dist
 /node_modules
+/mysql_data
+/redis_data
 
 # Logs
 logs
@@ -33,3 +35,6 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# Files
+.env
