--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   mysqldb:
     image: 'mysql:latest'
+    container_name: mysql_librooks
     env_file: ./.env
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
@@ -13,11 +14,19 @@ services:
       - "3306:3306"
     volumes:
       - ./mysql_data:/var/lib/mysql
+    networks:
+      - librooks
   redis:
     image: 'redis:latest'
+    container_name: redis_librooks
     ports:
       - "6379:6379"
     volumes:
       - ./redis_data:/var/lib/redis/data
+    networks:
+      - librooks
+networks:
+  librooks:
+    driver: bridge
 
 # COMMANDS: docker-compose up -d, docker-compose down
