--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-MYSQL_ROOT_PASSWORD=
-MYSQL_DATABASE=
-MYSQL_USER=
-MYSQL_PASSWORD=
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_ROOT_PASSWORD=
+DATABASE_NAME=
+DATABASE_USER=
+DATABASE_PASSWORD=
+NODE_ENV=
