--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   mysqldb:
     image: 'mysql:latest'
     container_name: mysql_librooks
-    env_file: ./.env
+    env_file: .env.development
     environment:
       MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD}
       MYSQL_ROOT_HOST: '%'
