Migrations second version

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "migrations:generate": "npm run typeorm -- migration:generate -d ./src/data-source.ts src/database/migrations/migraciones"
+    "migrations:generate": "npm run typeorm -- migration:generate -d src/data-source.ts src/database/migrations/$npm_config_name",
+    "migrations:run": "npm run typeorm -- migration:run -d src/data-source.ts",
+    "migrations:show": "npm run typeorm -- migration:show -d src/data-source.ts",
+    "migrations:drop": "npm run typeorm -- schema:drop -d src/data-source.ts"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
