--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.1.0",
+    "cache-manager": "^5.1.1",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "dotenv": "^16.0.3",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
+    "redis": "^3.1.2",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.10"
