--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "migrations:generate": "npm run typeorm -- migration:generate -d src/data-source.ts src/database/migrations/$npm_config_name",
-    "migrations:run": "npm run typeorm -- migration:run -d src/data-source.ts",
-    "migrations:show": "npm run typeorm -- migration:show -d src/data-source.ts",
-    "migrations:drop": "npm run typeorm -- schema:drop -d src/data-source.ts"
+    "migration:create": "npx typeorm migration:create src/database/migrations/$npm_config_name",
+    "migration:generate": "npm run build && npx typeorm migration:generate src/database/migrations/$npm_config_name -d dist/typeorm-cli.config",
+    "migration:show": "npm run build && npx typeorm migration:show -d dist/typeorm-cli.config",
+    "migration:run": "npm run build && npx typeorm migration:run -d dist/typeorm-cli.config",
+    "migration:revert": "npm run build && npx typeorm migration:revert -d dist/typeorm-cli.config"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.8.1",
