--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,22 @@ services:
       - ./mysql_data:/var/lib/mysql
     networks:
       - librooks
+  mysqldb-test:
+    image: 'mysql:latest'
+    container_name: mysql_librooks_test
+    env_file: .env
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD}
+      MYSQL_ROOT_HOST: '%'
+      MYSQL_DATABASE: ${DATABASE_NAME}
+      MYSQL_USER: ${DATABASE_USER}
+      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
+    ports:
+      - "3307:3306"
+    volumes:
+      - ./mysql_data:/var/lib/mysql
+    networks:
+      - librooks
 networks:
   librooks:
     driver: bridge
