Setting up database for testing

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_ROOT_PASSWORD=
+DATABASE_HOST=localhost
+DATABASE_PORT=3306
 DATABASE_NAME=
 DATABASE_USER=
 DATABASE_PASSWORD=
-NODE_ENV=
+DATABASE_ROOT_PASSWORD=
+DATABASE_HOST_TEST=localhost
+DATABASE_PORT_TEST=3305
 JWT_SECRET=
+EMAIL=
+EMAIL_PASSWORD=
+ROOT_PASSWORD=
