--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     ports:
       - "3305:3306"
     volumes:
-      - ./mysql_data:/var/lib/mysql
+      - ./mysql_data_test:/var/lib/mysql
     networks:
       - librooks
 networks:
