--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "migration:revert": "npm run build && npx typeorm migration:revert -d dist/typeorm-cli.config",
     "module:create": "nest g module $npm_config_name",
     "entity:create": "typeorm entity:create src/$npm_config_module/entities/$npm_config_name",
-    "dto:create": "nest g class $npm_config_module/dtos/$npm_config_name --no-spec --flat",
+    "dto:create": "nest g class $npm_config_module/dtos/$npm_config_name.dto --no-spec --flat",
     "service:create": "nest g service $npm_config_name $npm_config_module/services --flat",
     "controller:create": "nest g controller $npm_config_name $npm_config_module/controllers --flat"
   },
