--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-NODE_ENV=
+NODE_ENV= # development, test, production
 PORT=
 
+# Development
 DATABASE_HOST_DEV=
 DATABASE_PORT_DEV=
 DATABASE_NAME_DEV=
@@ -8,6 +9,7 @@ DATABASE_USER_DEV=
 DATABASE_PASSWORD_DEV=
 DATABASE_ROOT_PASSWORD_DEV=
 
+# Test
 DATABASE_HOST_TEST=
 DATABASE_PORT_TEST=
 DATABASE_NAME_TEST=
@@ -15,6 +17,7 @@ DATABASE_USER_TEST=
 DATABASE_PASSWORD_TEST=
 DATABASE_ROOT_PASSWORD_TEST=
 
+# Production
 DATABASE_HOST_PROD=
 DATABASE_PORT_PROD=
 DATABASE_NAME_PROD=
