--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.8'
 
 services:
   mysqldb:
+    container_name: mysql_db
     image: 'mysql:latest'
-    container_name: mysql_librooks
     env_file: .env
     environment:
       MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD_DEV}
@@ -15,22 +15,6 @@ services:
       - "3306:3306"
     volumes:
       - ./mysql_data:/var/lib/mysql
-    networks:
-      - librooks
-  mysqldb-test:
-    image: 'mysql:latest'
-    container_name: mysql_librooks_test
-    env_file: .env
-    environment:
-      MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD_TEST}
-      MYSQL_ROOT_HOST: '%'
-      MYSQL_DATABASE: ${DATABASE_NAME_TEST}
-      MYSQL_USER: ${DATABASE_USER_TEST}
-      MYSQL_PASSWORD: ${DATABASE_PASSWORD_TEST}
-    ports:
-      - "3305:3306"
-    volumes:
-      - ./mysql_data_test:/var/lib/mysql
     networks:
       - librooks
 networks:
