--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Make the environment file
         uses: SpicyPizza/create-envfile@v1.3
         with:
-          envkey_NODE_ENV: ${{secrets.NODE_ENV}}
+          envkey_NODE_ENV: ${{secrets.NODE_ENV_TEST}}
           envkey_PORT: ${{secrets.PORT}}
           envkey_DATABASE_HOST_TEST: ${{secrets.DATABASE_HOST_TEST}}
           envkey_DATABASE_PORT_TEST: ${{secrets.DATABASE_PORT_TEST}}
