--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main",
     "test": "jest",
+    "test:prod": "cross-env NODE_ENV=production jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e:prod": "cross-env NODE_ENV=production jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migration:create": "npx typeorm migration:create src/database/migrations/$npm_config_name",
     "migration:generate": "npm run build && npx typeorm migration:generate src/database/migrations/$npm_config_name -d dist/typeorm-cli.config",
@@ -45,6 +47,7 @@
     "bcrypt": "^5.1.0",
     "cache-manager": "^5.2.0",
     "class-transformer": "^0.5.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1",
