feat(CI): add ci steps

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -52,17 +52,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-#      - name: Execute remote SSH commands
-#        uses: appleboy/ssh-action@master
-#        with:
-#          host: ${{ secrets.AWS_HOST_PROD }}
-#          username: ${{ secrets.AWS_USER_PROD }}
-#          key: ${{ secrets.AWS_SSH_KEY }}
-#          passphrase: ${{ secrets.AWS_SSH_PASSWORD }}
-#          script: |
-#            PATH=$PATH:/usr/bin &&
-#            cd librooks &&
-#            git pull origin master &&
-#            npm install &&
-#            npm run build &&
-#            pm2 restart librooks
+      - name: Execute remote commands via ssh
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.AWS_HOST_PROD }}
+          username: ${{ secrets.AWS_USER_PROD }}
+          key: ${{ secrets.AWS_KEY_PROD }}
+          script: PATH=$PATH:/usr/bin && sh deploy_master.sh
